--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.2.9",
     "lucide-react": "^0.366.0",
     "next": "14.1.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
